--- a/docs/source/tests.ipynb
+++ b/docs/source/tests.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Tests\n",
-    "This notebook contains tests of the msynchro python package. "
+    "This notebook contains tests of the msynchro python package. \n",
+    "<div class=\"alert alert-info\">\n",
+    "Note: This page is a work in progress!\n",
+    "</div>"
    ]
   },
   {
@@ -25,16 +28,20 @@
    "source": [
     "### Test 1 : Cooled delta-function spectrum\n",
     "Our first test is simple advection of energy. We inject a delta function -- a population of electrons with a single energy or Lorentz factor. We define the cooling rate of electrons with energy $E=\\gamma mc^2$ as\n",
+    "\n",
     "$$\n",
-    "\\frac{dE}{dt} = -C_E E^{2}\n",
+    "\\frac{dE}{dt} = -C_E E^2\n",
     "$$\n",
+    "\n",
     "The energy of an electron with initial energy $E_0$ after cooling for a time $t$ is then given by\n",
+    "\n",
     "$$\n",
     "E(t) = \\frac{E_0^2}{E_0 - C_E E_0^2 t} \n",
     "$$\n",
+    "\n",
     "The test below compares the theoretically expected value with that obtained using msynchro's TDM algorithm. Some spreading in energy occurs due to numerical diffusion, but the peak of the distribution always matches theory. \n",
     "\n",
-    "The plot shows the electron energy at $1$Myr intervals for a magnetic field strength of $6\\mu$G. There are 1250 bins per energy decade in this case "
+    "The plot shows the electron energy at $1$ Myr intervals for a magnetic field strength of $6\\mu$G. There are 1250 bins per energy decade in this case "
    ]
   },
   {
